name: fnlp
version: 0.0.0.0
synopsis: purely functional natural language processing
license: GPL-3
license-file: LICENSE
author: RoboNickBot
maintainer: nicklewchenko92@gmail.com
category: Natural Language Processing
build-type: Simple
cabal-version: >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010

  exposed-modules:     Data.FNLP
                     , Data.FNLP.Common
                     , Data.FNLP.Core
                     , Data.FNLP.Freq

                     , FNLP
                     , FNLP.Prelude

                     , FNLP.External
                     , FNLP.External.OldFS
                     , FNLP.External.TriGramsDB

  other-modules:       Database.SimpleDB
                     , Pipes.Comparator
                     , Pipes.Share

  build-depends:       base >=4.8 && <4.9
                     , containers >=0.5 && <0.6
                     , text >=1.2 && <1.3
                     , parsec >=3.1 && <3.2
                     , charset >=0.3 && <0.4

                     , strict >=0.3 && < 0.4
                     , convertible >=1.1 && < 1.2
                     , pipes >=4.1 && <4.2
                     , directory >=1.2 && <1.3
                     , HDBC >=2.4 && <2.5
                     , HDBC-sqlite3 >=2.3 && <2.4
                     , filepath >=1.4 && <1.5

-- test-suite tests
--   default-language:    Haskell2010
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      tests
--   main-is:             Main.hs
  
--   build-depends:       base >=4.8 && <4.9
--                      , fnlp >= 0.0
                
-- benchmark benchmarks
--   default-language:    Haskell2010
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      benchmarks
--   main-is:             Main.hs
  
--   build-depends:       base >=4.8 && <4.9
--                      , criterion >=1.1 && < 1.2
--                      , fnlp >= 0.0
                